<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical"
    >

   <TextView
       android:id="@+id/bind_textView"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:gravity="center"
       android:text="绑定设备"
       android:textSize="25dp"
       android:textColor="@color/colorBlack"
       android:layout_marginBottom="10dp"
       />

   <LinearLayout
       android:id="@+id/userid_Linear"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:gravity="center"
       android:orientation="horizontal"
       >
       <TextView
           android:layout_width="90dp"
           android:layout_height="wrap_content"
           android:textSize="16dp"
           android:textColor="@color/text_color_3"
           android:text="@string/zj_userid"
           />
       <EditText
           android:id="@+id/userid_Edit"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="16dp"
           android:textColor="@color/text_color_3"
           android:textColorHint="@color/colorGray"
           android:hint="@string/zj_input_userid"
           />
   </LinearLayout>

   <LinearLayout
        android:id="@+id/username_Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
       android:gravity="center"
       android:visibility="gone"
        >
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/text_color_3"
            android:text="@string/zj_username"
            />
        <EditText
            android:id="@+id/username_Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/text_color_3"
            android:textColorHint="@color/colorGray"
            android:hint="@string/zj_input_username"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageurl_Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/text_color_3"
            android:text="@string/zj_imageurl"
            />
        <EditText
            android:id="@+id/imageurl_Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/text_color_3"
            android:textColorHint="@color/colorGray"
            android:hint="@string/zj_input_imageurl"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/devices_Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/text_color_3"
            android:text="@string/zj_devices_id"
            />
        <EditText
            android:id="@+id/devices_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/text_color_3"
            android:textColorHint="@color/colorGray"
            android:hint="@string/zj_input_devices_id"
            />
    </LinearLayout>

    <Button
        android:id="@+id/bind_Btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/zj_bind"
        android:textSize="16dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/btn_blue_shape_ovl"
        />


</LinearLayout>
