<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    >

    <LinearLayout
        android:id="@+id/userid_Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_user_name"
            android:scaleType="centerInside"
            />
        <EditText
            android:id="@+id/userid_Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:inputType="phone"
            android:textColor="@color/text_color_3"
            android:textColorHint="@color/colorGray"
            android:hint="@string/zj_input_userid"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/psd_Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_password"
            android:scaleType="centerInside"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/psd_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/text_color_3"
                android:textColorHint="@color/colorGray"
                android:hint="@string/zj_input_yzm"
                android:inputType="number"
                />
            <Button
                android:id="@+id/login_yzm_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="14dp"
                android:textColor="@color/text_color_3"
                android:text="获取验证码"
                android:background="@drawable/btn_white_shape_ovl"
                />
        </RelativeLayout>

    </LinearLayout>


    <Button
        android:id="@+id/login_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="16dp"
        android:text="@string/zj_login"
        android:textColor="@color/colorWhite"
        android:background="@drawable/btn_blue_shape_ovl"/>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:textColor="@color/text_color_6"
            android:textSize="16dp"
            android:text="@string/zj_regist"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_6"
            android:textSize="16dp"
            android:text="@string/zj_forget_pwd"/>

    </LinearLayout>-->

</LinearLayout>
